--- a/css/estilos.css
+++ b/css/estilos.css
@@ -10,25 +10,25 @@ body {
   width: 100%;
   height: 100vh;
   text-align: center;
-  background-color: #161c4a;
+  background-color: #371b0e;
   padding: 1em;
 }
 
 body header {
-  background-color: #161c4a;
+  background-color: #371b0e;
   margin: 1%;
 }
 
 body header .titulo {
   /****titulo****/
-  color: #161c4a;
+  color: #371b0e;
   font-family: "Londrina Outline", cursive;
   font-size: 4.5rem;
   text-align: center;
   width: 90%;
   height: 100%;
   margin: 1% 5%;
-  background-color: #3ae8ec;
+  background-color: #f89900;
   border-style: double;
   border-width: 5%;
   border-radius: 10%;
@@ -47,7 +47,7 @@ body header .titulo a {
 
 body header .bulldog {
   /****subtitulo****/
-  color: #3ae8ec;
+  color: #f89900;
   padding: 5%;
   font-style: oblique;
   font-weight: normal;
@@ -59,18 +59,18 @@ body header .bulldog {
   text-decoration: none;
   letter-spacing: normal;
   word-spacing: normal;
-  background-color: #3ae8ec;
+  background-color: #f89900;
   margin: 10px;
   /*transform*/
   transform: scale(1, 1);
   /*gradiante*/
-  background: #161c4a;
+  background: #371b0e;
   animation-duration: 2s;
   animation-name: aparecer;
 }
 
 .fas {
-  color: #161c4a;
+  color: #371b0e;
 }
 
 header nav ul {
@@ -79,14 +79,14 @@ header nav ul {
   margin: 1%;
   border-style: double;
   border-radius: 5%;
-  border-color: #161c4a;
+  border-color: #371b0e;
   margin-left: 20%;
   margin-right: 20%;
   justify-content: space-between;
   border: 5%;
-  background-color: #3ae8ec;
-  color: #161c4a;
-  background-color: #3ae8ec;
+  background-color: #f89900;
+  color: #371b0e;
+  background-color: #f89900;
 }
 
 header nav ul li {
@@ -100,7 +100,7 @@ header nav ul li {
 }
 
 header nav ul li a {
-  color: #161c4a;
+  color: #371b0e;
   height: 100%;
   transition: 2s;
   text-decoration: none;
@@ -109,12 +109,12 @@ header nav ul li a {
 footer {
   color: white;
   text-align: center;
-  background-color: #161c4a;
+  background-color: #371b0e;
   margin: 5% 0% 0%;
 }
 
 footer div a {
-  color: #3ae8ec;
+  color: #f89900;
   text-align: center;
 }
 
@@ -124,7 +124,7 @@ footer address {
 }
 
 h2 {
-  color: #3ae8ec;
+  color: #f89900;
   font-style: oblique;
   font-weight: normal;
   font-size: 2.0rem;
@@ -142,7 +142,7 @@ h2 {
 }
 
 h3 {
-  color: #3ae8ec;
+  color: #f89900;
   font-style: italic;
   font-weight: normal;
   font-size: 1.25rem;
@@ -154,23 +154,23 @@ h3 {
   text-decoration: solid;
   letter-spacing: normal;
   word-spacing: normal;
-  background-color: #161c4a;
+  background-color: #371b0e;
   margin: 5%;
 }
 
 main section div p {
-  color: #161c4a;
+  color: #371b0e;
   font-size: 1.2rem;
   margin: 10%;
   border: 5%;
   border-style: double;
   padding: 5%;
-  background-color: #3ae8ec;
+  background-color: #f89900;
 }
 
 main section table {
-  color: #161c4a;
-  border-color: #3ae8ec;
+  color: #371b0e;
+  border-color: #f89900;
   border-width: 5%;
   text-align: center;
   font-size: 1.2rem;
@@ -178,15 +178,15 @@ main section table {
 }
 
 main section thead {
-  color: #161c4a;
-  background: #3ae8ec;
+  color: #371b0e;
+  background: #f89900;
   text-transform: uppercase;
 }
 
 main section tbody {
   color: white;
-  background-color: #161c4a;
-  border: #3ae8ec;
+  background-color: #371b0e;
+  border: #f89900;
 }
 
 main section ul {
@@ -201,10 +201,10 @@ main section ul {
   text-decoration: solid;
   letter-spacing: 0.25rem;
   word-spacing: normal;
-  background-color: #161c4a;
+  background-color: #371b0e;
   margin-bottom: 10%;
   border-style: double;
-  border-color: #3ae8ec;
+  border-color: #f89900;
   padding: 5%;
 }
 
@@ -212,14 +212,14 @@ main section ul .listaRaza {
   list-style-position: inside;
   color: white;
   padding: 1%;
-  background: #161c4a;
+  background: #371b0e;
 }
 
 main section ul .listaCuidados {
   list-style-position: inside;
   color: white;
   padding: 1%;
-  background: #161c4a;
+  background: #371b0e;
 }
 
 main section .divContactos ul {
@@ -240,9 +240,9 @@ main section .divContactos ul li a {
 
 main section form {
   color: white;
-  background: #161c4a;
+  background: #371b0e;
   border-style: solid;
-  border-color: #3ae8ec;
+  border-color: #f89900;
   border: 5%;
   padding: 2%;
   margin: 5%;
