--- a/css/sass/estilos.scss
+++ b/css/sass/estilos.scss
@@ -11,22 +11,22 @@ body {
     width: 100%;
     height: 100vh;
     text-align: center;
-    background-color: $azul;
-    padding: 1em;
+    background-color: $marron;
+    padding: 5px;
 
         header{
-            background-color: $azul;
+            background-color: $marron;
             margin:1%;
 
                 .titulo{/****titulo****/
-                    color: $azul;
+                    color: $marron;
                     font-family:$titulo;
                     font-size: 4.5rem;
                     text-align: center;
                     width: 90%;
                     height: 100%;
                     margin: 1% 5%; 
-                    background-color: $celeste;
+                    background-color: $naranja;
                     border-style:double;
                     border-width: 5%;
                     border-radius: 10%;
@@ -44,7 +44,7 @@ body {
                 }
 
                 .bulldog{/****subtitulo****/
-                    color:$celeste;
+                    color:$naranja;
                     padding: 5%;
                     font-style:oblique ;
                     font-weight: normal;
@@ -56,12 +56,12 @@ body {
                     text-decoration: none;
                     letter-spacing: normal;
                     word-spacing: normal;
-                    background-color:$celeste ;
+                    background-color:$naranja ;
                     margin:10px;
                     /*transform*/
                     transform:scale(1,1) ;
                     /*gradiante*/
-                    background:$azul;  
+                    background:$marron;  
                     animation-duration: 2s;
                     animation-name: aparecer; 
                 }
@@ -69,7 +69,7 @@ body {
         }
 }
 .fas{
-    color: $azul;
+    color: $marron;
 }
 header{
 
@@ -80,14 +80,13 @@ header{
                 margin: 1%; 
                 border-style:double ;
                 border-radius: 5%;
-                border-color: $azul;
+                border-color: $marron;
                 margin-left: 20%;
                 margin-right: 20%;
                 justify-content: space-between;
                 border:5%;
-                background-color:$celeste;
-                color: $azul;
-                background-color: $celeste;
+                background-color:$naranja;
+                color: $marron;
                     li{
                         font-size: 1.5rem;
                         text-align: center;
@@ -98,7 +97,7 @@ header{
                         animation-name: aparecer;
 
                             a{
-                                color: $azul;
+                                color: $marron;
                                 height: 100%;
                                 transition: 2s;
                                 text-decoration: none;
@@ -110,11 +109,11 @@ header{
 footer{
         color: $blanco;
         text-align: center;
-        background-color: $azul;
+        background-color: $marron;
         margin: 5% 0% 0%;
         div{
             a{
-                color: $celeste;
+                color: $naranja;
                 text-align: center;
             }
         }
@@ -124,7 +123,7 @@ footer{
         }
 }
 h2{
-    color:$celeste;
+    color:$naranja;
     font-style: oblique;
     font-weight: normal;
     font-size: 2.0rem;
@@ -153,7 +152,7 @@ h3{
     text-decoration: solid;
     letter-spacing: normal;
     word-spacing: normal;
-    background-color: $azul;
+    background-color: $marron;
     margin: 5%;
 }
 main{
@@ -163,13 +162,13 @@ main{
              div{
 
                  p{
-                    color: $azul;
+                    color: $marron;
                     font-size: 1.2rem;
                     margin: 10%;
                     border: 5%;
                     border-style:double;
                     padding: 5%;
-                    background-color: $celeste;
+                    background-color: $naranja;
             }
         }
     }
@@ -177,22 +176,22 @@ main{
 main{
     section{
         table{
-            color: $azul;
-            border-color: $celeste;
+            color: $marron;
+            border-color: $naranja;
             border-width: 5%;
             text-align: center;
             font-size: 1.2rem;
             margin-bottom: 10%;
         }
         thead{
-            color: $azul;
-            background:$celeste;
+            color: $marron;
+            background:$naranja;
             text-transform:uppercase ;
         }
         tbody{
             color: $blanco;
-            background-color: $azul;
-            border: $celeste;
+            background-color: $marron;
+            border: $naranja;
         }
     }
 }
@@ -210,22 +209,22 @@ main{
             text-decoration: solid;
             letter-spacing: 0.25rem;
             word-spacing:normal ;
-            background-color:$azul;
+            background-color:$marron;
             margin-bottom: 10%;
             border-style: double;
-            border-color: $celeste;
+            border-color: $naranja;
             padding: 5%;
                 .listaRaza{
                     list-style-position:inside ;
                     color:$blanco;
                     padding: 1%;
-                    background: $azul;
+                    background: $marron;
                 }
                 .listaCuidados{
                     list-style-position:inside ;
                     color:$blanco;
                     padding: 1%;
-                    background: $azul;
+                    background: $marron;
                 }
         }
     }
@@ -252,9 +251,9 @@ main{
             }
             form{
                 color: $blanco;
-                background: $azul;
+                background: $marron;
                 border-style: solid;
-                border-color: $celeste;
+                border-color: $naranja;
                 border: 5%;
                 padding: 2%;
                 margin: 5%;
