--- a/css/sass/base/_colores.scss
+++ b/css/sass/base/_colores.scss
@@ -1,5 +1,5 @@
 $negro: #000;
 $rojo: red;
 $blanco: white;
-$azul:rgb(22, 28, 74);
-$celeste: rgb(58, 232, 236);
+$marron:rgb(55, 27, 14);
+$naranja: rgb(248, 153, 0);
