--- a/css/sass/estilos.scss
+++ b/css/sass/estilos.scss
@@ -1,6 +1,7 @@
 @import "base/fuentes";
 @import "base/colores";
 @import "base/mixins";
+@import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap');
 
 html {
     font-size: 16px;
