--- a/css/sass/base/_fuentes.scss
+++ b/css/sass/base/_fuentes.scss
@@ -1,3 +1,3 @@
 $brygada: 'Brygada 1918', serif;
 $spartan: 'Spartan', sans-serif;
-$titulo:'Londrina Outline', cursive;
+$titulo:'Abril Fatface', cursive;
