--- a/sass/estilos.scss
+++ b/sass/estilos.scss
@@ -75,12 +75,19 @@ body {
 header{
 
     nav{
+        .navbar-light{
+            background-color: #f89900;
+            border-color: #f89900;
+            .navbar-toggler{
+
+            }
+        }      
             ul{
                 width: 100%;
                 height: 100%;
-                margin: 1%; 
+                margin: 1% 5%; 
                 border-style:double ;
-                border-radius: 5%;
+                border-radius: 0%;
                 border-color: $marron;
                 margin-left: 20%;
                 margin-right: 20%;
@@ -269,4 +276,6 @@ main{
       opacity: 1;
     }
  }
+
+
 
